force-app/main/default/objects/Donor_Comp__e/Donor_Comp__e.object-meta.xml
<CustomObject>
    <description>The last donation step in the donation process typically indicating payment is owed.</description>
    <label>Donor Comp</label>
    <pluralLabel>Donor Comps</pluralLabel>
</CustomObject>