force-app/main/default/objects/Donor_Comp__e/fields/BECS_Device__c.field-meta.xml
<CustomField>
    <fullName>BECS_Device__c</fullName>
    <description>Serial number of BECS machine</description>
    <label>BECS Device</label>
    <length>50</length>
    <type>Text</type>
</CustomField>