force-app/main/default/objects/Donor_Comp__e/fields/Collection_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_Number__c</fullName>
    <description>Unique donation collection identifier.</description>
    <label>Collection Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>