force-app/main/default/objects/Donor_Comp__e/fields/Collection_Volume__c.field-meta.xml
<CustomField>
    <fullName>Collection_Volume__c</fullName>
    <description>The volume in milliliters (ml or cc) of the donation collected.</description>
    <label>Collection Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>