force-app/main/default/objects/Donor_Comp__e/fields/Donor_Number__c.field-meta.xml
<CustomField>
    <fullName>Donor_Number__c</fullName>
    <label>Donor Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>