force-app/main/default/objects/Donor_Comp__e/fields/hasException__c.field-meta.xml
<CustomField>
    <fullName>hasException__c</fullName>
    <description>Indicates with 1 or 0 (from Haemonetics NL integration) true or false, respectively.</description>
    <label>Has Exception</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>